View上点击保存时，通过UserPresenter传递给StudentModel的save方法；View上点击加载时，通过UserPresenter传递给StudentModel的load方法，之后再通过UserPresenter传递给View，更新View显示

--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -61,4 +61,26 @@
 
     </LinearLayout>
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:id="@+id/save"
+            android:text="保存"/>
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:id="@+id/load"
+            android:text="加载"/>
+
+    </LinearLayout>
+
 </LinearLayout>
